<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="12"
    tools:context=".LeadersBoard_Activity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/submit"
            android:fontFamily="@font/raleway_medium" />
    </androidx.appcompat.widget.Toolbar>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:paddingHorizontal="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/second_profile_image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/avatar_two" />

            <TextView
                android:id="@+id/second_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/name_two"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/second_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/num_two"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/first_profile_image"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/avatar_one" />

            <TextView
                android:id="@+id/first_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/name_one"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/first_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/num_one"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/third_profile_image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/avatar_three" />

            <TextView
                android:id="@+id/third_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/name_three"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/third_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/num_three"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>

    <TableLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorGray" />

    <!--<androidx.viewpager2.widget.ViewPager2
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8" />-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/custom_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:scrollbars="vertical" />

</LinearLayout>